removed metabase and kubernetes docs